# pynormanshutters

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pynormanshutters.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
tests/: test_client.py
