[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynormanshutters"
version = "0.1.2"
description = "Python client for Norman shutters"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "requests",
    "zeroconf",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bumpversion]
current_version = "0.1.2"
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = "--no-verify"
message = "chore: bump version to {new_version} [skip release]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
